--- a/index.html
+++ b/index.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="header container">
+        <a href="/" class="header-logo-link">
+            <img class="header-logo-image"
+            src="./images/Logo.svg"
+            width="47px"
+            height="17px"
+            alt="Logo">
+        </a>
+        <nav class="header-nav">
+            <ul class="header-nav-list">
+                <li class="header-nav-item">
+                    <a href="/" class="header-nav-link is-current">world</a>
+                </li>
+                <li class="header-nav-item">
+                    <a href="/" class="header-nav-link">destination</a>
+                </li>
+                <li class="header-nav-item">
+                    <a href="/" class="header-nav-link">features</a>
+                </li>
+                <li class="header-nav-item">
+                    <a href="/" class="header-nav-link">gallery</a>
+                </li>
+                <li class="header-nav-item">
+                    <a href="/" class="header-nav-link">about</a>
+                </li>
+            </ul>
+        </nav>
+        <button class="header-button button" type="button">Join Member</button>
+        <img class="header-burger-icon"
+          src="./icons/burger.svg"
+          width="24"
+          height="24"
+          alt="burger-icon">
+    </header>
 </body>
 </html>
