--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -41,5 +41,66 @@
           height="24"
           alt="burger-icon">
     </header>
+    <main class="main">
+        <h1 class="main-title"></h1>
+        <section class="hero container">
+            <h2 class="hero-title visually-hidden">Hero title</h2>
+            <p class="hero-decorative-title">Discover beautiful places in the new world</p>
+            <p class="hero-description">Find vacation spots in various worlds with your family and feel the beauty that you have never felt before</p>
+            <form class="hero-form">
+                <div class="hero-form-select-wrap">
+                    <label for="destination">Destination</label>
+                    <select class="hero-form-select" name="destination" id="destination">
+                        <option value="mail">Green Land</option>
+                    </select>
+                </div>
+                <div class="hero-form-select-wrap">
+                    <label for="price">Average Price</label>
+                    <select class="hero-form-select" name="price" id="price">
+                        <option value="mail">Green Land</option>
+                    </select>
+                </div>
+                <div class="hero-form-select-wrap">
+                    <label for="date">Date</label>
+                    <select class="hero-form-select" name="date" id="date">
+                        <option value="mail">23 Mey 2022</option>
+                    </select>
+                </div>
+                <button class="hero-form-button button" type="submit">Search</button>
+            </form>
+            <div class="hero-video-wrapper">
+                <div class="hero-video-inner">
+                    <video class="hero-video" src="/" width="698" height="835" poster="./images/video-placeholder.jpg"></video>
+                </div>
+            </div>
+            <div class="hero-visitors-wrapper">
+                <p class="hero-visitors-title">Many have visited</p>
+                <ul class="hero-visitors-list">
+                    <li class="hero-visitors-item">
+                        <img class="hero-visitors-avatar"
+                          src=""
+                          width=""
+                          height=""
+                          alt="">
+                    </li>
+                    <li class="hero-visitors-item">
+                        <img class="hero-visitors-avatar"
+                          src=""
+                          width=""
+                          height=""
+                          alt="">
+                    </li>
+                    <li class="hero-visitors-item">
+                        <img class="hero-visitors-avatar"
+                          src=""
+                          width=""
+                          height=""
+                          alt="">
+                    </li>
+                    <li class="hero-visitors-item">+42</li>
+                </ul>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
