--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1 class="main-title"></h1>
         <section class="hero container">
             <h2 class="hero-title visually-hidden">Hero title</h2>
-            <p class="hero-decorative-title"><span>Discover</span> beautiful places in the new world</p>
+            <p class="hero-decorative-title"><span>Discover</span></br> beautiful places in the new world</p>
             <p class="hero-description">Find vacation spots in various worlds with your family and feel the beauty that you have never felt before</p>
             <form class="hero-form">
                 <div class="hero-form-select-wrap">
