--- a/index.html
+++ b/index.html
@@ -106,6 +106,67 @@
                 </ul>
             </div>
         </section>
+        <section class="sponsors container">
+            <h2 class="sponsors-title visually-hidden">Our sponsors</h2>
+            <p class="sponsors-description">This activity is supported by</p>
+            <ul class="sponsors-list">
+                <li class="sponsors-list-item">
+                    <img class="sponsors-list-item-imege"
+                      src="./images/sponsors/sponsor-1.svg"
+                      width="128"
+                      height="25"
+                      alt="sponsor">
+                </li>
+                <li class="sponsors-list-item">
+                    <img class="sponsors-list-item-imege"
+                      src="./images/sponsors/sponsor-2.svg"
+                      width="199"
+                      height="25"
+                      alt="sponsor">
+                </li>
+                <li class="sponsors-list-item">
+                    <img class="sponsors-list-item-imege"
+                      src="./images/sponsors/sponsor-3.svg"
+                      width="314"
+                      height="25"
+                      alt="sponsor">
+                </li>
+                <li class="sponsors-list-item">
+                    <img class="sponsors-list-item-imege"
+                      src="./images/sponsors/sponsor-4.svg"
+                      width="112"
+                      height="25"
+                      alt="sponsor">
+                </li>
+                <li class="sponsors-list-item">
+                    <img class="sponsors-list-item-imege"
+                      src="./images/sponsors/sponsor-5.svg"
+                      width="202"
+                      height="25"
+                      alt="sponsor">
+                </li>
+            </ul>
+        </section>
+        <section class="places container">
+            <h2 class="places-title visually-hidden">New places</h2>
+            <div class="places-body">
+                <p class="places-title decorative-title">Let's visit tourist places you've never tried</p>
+                <p class="places-passage">Hi, are you in good health? let's take your journey in various places you haven't visited and discover new atmospheres and the beauty of extraordinary nature, we will always be waiting for you to join us</p>
+                <a href="/" class="places-button button">Reservation</a>
+            </div>
+            <picture class="places-pucture">
+                <source srcset="
+                ./images/places/places@1X.avif 1x, 
+                ./images/places/places@2X.avif 2x" 
+                type="image/avif">
+                <img src="
+                ./images/places/places@1X.jpg 1x,
+                ./images/places/places@2X.jpg 2x" 
+                alt="test image" 
+                width="830" 
+                height="609">
+            </picture>
+        </section>
     </main>
 </body>
 </html>
