--- a/index.html
+++ b/index.html
@@ -154,18 +154,58 @@
                 <p class="places-passage">Hi, are you in good health? let's take your journey in various places you haven't visited and discover new atmospheres and the beauty of extraordinary nature, we will always be waiting for you to join us</p>
                 <a href="/" class="places-button button">Reservation</a>
             </div>
-            <picture class="places-pucture">
-                <source srcset="
-                ./images/places/places@1X.avif 1x, 
-                ./images/places/places@2X.avif 2x" 
-                type="image/avif">
-                <img src="
-                ./images/places/places@1X.jpg 1x,
-                ./images/places/places@2X.jpg 2x" 
-                alt="test image" 
-                width="830" 
-                height="609">
-            </picture>
+            <div class="plasce-picture-wrapper">
+                <picture class="places-pucture">
+                    <source srcset="
+                    ./images/places/places@1X.avif 1x, 
+                    ./images/places/places@2X.avif 2x" 
+                    type="image/avif">
+                    <img class="places-image" src="
+                    ./images/places/places@1X.jpg 1x,
+                    ./images/places/places@2X.jpg 2x" 
+                    alt="test image" 
+                    width="830" 
+                    height="609">
+                </picture>
+                <ul class="places-users-list">
+                    <li class="places-users-item">
+                        <a href="" class="places-users-link">
+                            <img class="places-users-image"
+                            src="./images/people/people2.avif"
+                            width="48"
+                            height="48"
+                            alt="tex">
+                        </a>
+                    </li>
+                    <li class="places-users-item">
+                        <a href="" class="places-users-link">
+                            <img class="places-users-image"
+                            src="./images/people/people3.avif"
+                            width="48"
+                            height="48"
+                            alt="tex">
+                        </a>
+                    </li>
+                    <li class="places-users-item">
+                        <a href="" class="places-users-link">
+                            <img class="places-users-image"
+                            src="./images/people/people4.avif"
+                            width="48"
+                            height="48"
+                            alt="tex">
+                        </a>
+                    </li>
+                    <li class="places-users-item">
+                        <a href="" class="places-users-link">
+                            <img class="places-users-image"
+                            src="./images/people/people5.avif"
+                            width="48"
+                            height="48"
+                            alt="tex">
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
 </body>
