--- a/index.html
+++ b/index.html
@@ -207,6 +207,85 @@
                 </ul>
             </div>
         </section>
+        <section class="best container">
+            <div class="best-image-wrapper">
+                <picture class="best-image-picture">
+                    <source srcset="
+                    ./images/best/best@1X.avif 1x, 
+                    ./images/best/best@2X.avif 2x" 
+                    type="image/avif">
+                    <img class="best-image" src="
+                    ./images/best/best@1X.jpg 1x,
+                    ./images/best/best@2X.jpg 2x" 
+                    alt="test image" 
+                    width="602" 
+                    height="554">
+                </picture>
+                <div class="best-review">
+                    <div class="best-review-author">
+                        <img class="best-review-image"
+                          src="./images/people/people1.avif"
+                          width="54"
+                          height="54"
+                          alt="">
+                          <div class="best-review-author-wrap">
+                            <p class="best-review-name">Niaga Adam</p>
+                            <p class="best-review-author-status">traveler</p>
+                          </div>
+                    </div>
+                    <p class="best-review-text">“ Wow amazing! thank you for being the best tourist spot with a great view “</p>
+                    <div class="best-review-rating">
+                        <ul class="best-review-rating-list">
+                            <li class="best-review-rating-item">
+                                <img class="best-review-rating-image"
+                                  src="./icons/star-yellow.svg"
+                                  width="16"
+                                  height="16"
+                                  alt="image">
+                            </li>
+                            <li class="best-review-rating-item">
+                                <img class="best-review-rating-image"
+                                  src="./icons/star-yellow.svg"
+                                  width="16"
+                                  height="16"
+                                  alt="image">
+                            </li>
+                            <li class="best-review-rating-item">
+                                <img class="best-review-rating-image"
+                                  src="./icons/star-yellow.svg"
+                                  width="16"
+                                  height="16"
+                                  alt="image">
+                            </li>
+                            <li class="best-review-rating-item">
+                                <img class="best-review-rating-image"
+                                  src="./icons/star-yellow.svg"
+                                  width="16"
+                                  height="16"
+                                  alt="image">
+                            </li>
+                            <li class="best-review-rating-item">
+                                <img class="best-review-rating-image"
+                                  src="./icons/star-yellow.svg"
+                                  width="16"
+                                  height="16"
+                                  alt="image">
+                            </li>
+                        </ul>
+                        <p class="best-review-rating-number">5.0</p>
+                    </div>
+                </div>
+            </div>
+            <div class="best-body">
+                <h2 class="best-title">Best destination</h2>
+                <p class="best-decorative-title decorative-title">The best tourist spots in japan</p>
+                <p class="best-text">We recommend our best tours in Japan which have the best rankings from other tourist attractions and get promos of up to 70%</p>
+                <div class="best-button-wrapp">
+                    <a href="" class="best-button button">find Destiation</a>
+                    <a href="" class="best-button button transparent">Watch Videos</a>
+                </div>  
+            </div>
+        </section>
     </main>
 </body>
 </html>
