--- a/index.html
+++ b/index.html
@@ -286,6 +286,73 @@
                 </div>  
             </div>
         </section>
+        <section class="destination">
+            <div class="destination-inner container">
+                <h2 class="destination-title">Find your travel destination</h2>
+                <ul class="destination-list">
+                    <li class="destination-list-item">
+                        <picture class="destination-list-item-picture">
+                            <source srcset="
+                            ./images/best/best@1X.avif 1x, 
+                            ./images/best/best@2X.avif 2x" 
+                            type="image/avif">
+                            <img class="destination-list-item-image" src="
+                            ./images/best/best@1X.jpg 1x,
+                            ./images/best/best@2X.jpg 2x" 
+                            alt="test image" 
+                            width="602" 
+                            height="554">
+                        </picture>
+                        <div class="destination-list-item-description">
+                            <p class="destination-list-item-label">Kulon Progo</p>
+                            <h3 class="destination-list-item-title"></h3>
+                            <div class="destination-list-item-info">
+                                <div class="destination-list-item-rating-list-wrap">
+                                    <ul class="destination-list-item-rating-list">
+                                        <li class="destination-list-item-rating-list-star">
+                                            <img class=""
+                                              src="./icons/star-yellow.svg"
+                                              width=""
+                                              height=""
+                                              alt="star">
+                                        </li>
+                                        <li class="destination-list-item-rating-list-star">
+                                            <img class=""
+                                              src="./icons/star-yellow.svg"
+                                              width=""
+                                              height=""
+                                              alt="star">
+                                        </li>
+                                        <li class="destination-list-item-rating-list-star">
+                                            <img class=""
+                                              src="./icons/star-yellow.svg"
+                                              width=""
+                                              height=""
+                                              alt="star">
+                                        </li>
+                                        <li class="destination-list-item-rating-list-star">
+                                            <img class=""
+                                              src="./icons/star-yellow.svg"
+                                              width=""
+                                              height=""
+                                              alt="star">
+                                        </li>
+                                        <li class="destination-list-item-rating-list-star">
+                                            <img class=""
+                                              src="./icons/star-yellow.svg"
+                                              width=""
+                                              height=""
+                                              alt="star">
+                                        </li>
+                                    </ul>
+                                    <a href="" class="destination-list-item-info-price button">$300</a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 </body>
 </html>
