--- a/index.html
+++ b/index.html
@@ -660,6 +660,41 @@
                 <button class="destination-button button">See All</button>
             </div>
         </section>
+        <section class="testimonials">
+            <div class="testimonials-inner container">
+                <div class="testimonials-body">
+                    <h2 class="testimonials-title decorative-title">Why do you always trust us?</h2>
+                    <p class="testimonial-text">Because we have been established for more than 12 years, and we have worked with various large companies regarding tourism. With 12 years of existence we have expanded widely in various countries, therefore you don't have to worry about trust</p>
+                    <ul class="testimonials-list">
+                        <li class="testimonials-item">
+                            <dl>
+                                <dt>352<span>K</span></dt>
+                                <dd>Travel branches all over the world</dd>
+                            </dl>
+                        </li>
+                        <li class="testimonials-item">
+                            <dl>
+                                <dt>150<span>K</span></dt>
+                                <dd>our cooperation partners in various countries</dd>
+                            </dl>
+                        </li>
+                        <li class="testimonials-item">
+                            <dl>
+                                <dt>726<span>K</span></dt>
+                                <dd>happy reviews from customers</dd>
+                            </dl>
+                        </li>
+                        <li class="testimonials-item">
+                            <dl>
+                                <dt>452<span>K</span></dt>
+                                <dd>tourism branch that is our partner</dd>
+                            </dl>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+        </section>
     </main>
 </body>
 </html>
