--- a/index.html
+++ b/index.html
@@ -718,5 +718,88 @@
             </form>
         </section>
     </main>
+    <footer class="footer">
+        <div class="footer-inner container">
+            <div class="footer-body">
+                <img class="footer-logo"
+                  src="./images/logo-footer.svg"
+                  width="85"
+                  height="32"
+                  alt="logo"
+                >
+                <p class="footer-text">Number 3891 Ranchview Dr. Richardson,</br> California 62639, Amerika Serikat Country</p>
+                <div class="footer-contacts-wrapper">
+                    <dl class="footer-email-wrapper">
+                        <dt>Email Address</dt>
+                        <dd><a href="mailto:otrip@gmail.com">Otrip@gmail.com</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>Phone Number</dt>
+                        <dd class="footer-phones"><a href="tel:2705550117">(270) 555-0117</a>&nbsp;<span>-</span>&nbsp;<a href="tel:2705550443">(270) 555-0443</a></dd>
+                    </dl>
+                </div>
+            </div>
+            <ul class="footer-navs-list">
+                <li class="footer-navs-item">
+                    <h4 class="footer-navs-item-title">company</h4>
+                    <ul class="footer-nav-list">
+                        <li class="footer-nav-item">
+                            <a href="" class="footer-nav-link">world</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="" class="footer-nav-link">destination</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="" class="footer-nav-link">features</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="" class="footer-nav-link">gallery</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="" class="footer-nav-link">about</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="footer-navs-item">
+                    <h4 class="footer-navs-item-title">destination</h4>
+                    <ul class="footer-nav-list">
+                        <li class="footer-nav-item">
+                            <a href="" class="footer-nav-link">beach</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="" class="footer-nav-link">jungle</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="" class="footer-nav-link">mountain</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="" class="footer-nav-link">sea</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="" class="footer-nav-link">flying</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="footer-navs-item">
+                    <h4 class="footer-navs-item-title">social</h4>
+                    <ul class="footer-nav-list">
+                        <li class="footer-nav-item">
+                            <a href="" class="footer-nav-link">instagram</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="" class="footer-nav-link">linkedin</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="" class="footer-nav-link">facebook</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="" class="footer-nav-link">twitter</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <p class="footer-copyright">Copy Right Otrip 2021-2022, All Rights Reserved</p>
+    </footer>
 </body>
 </html>
