--- a/index.html
+++ b/index.html
@@ -214,12 +214,19 @@
         <section class="best container">
             <div class="best-image-wrapper">
                 <picture class="best-image-picture">
+                    <source srcset="./images/places/places@1X.avif 1x, ./images/places/places@2X.avif 2x" type="image/avif">
+                    <img class="best-image" src="./images/places/places@1X.jpg" srcset="./images/places/places@1X.jpg 1x, ./images/places/places@2X.jpg 2x" 
+                    alt="test image"
+                    width="602"
+                    height="554">
+                </picture>
+                <!-- <picture class="best-image-picture">
                     <source srcset="./images/best/best@1X.avif 1x, ./images/best/best@2X.avif 2x" type="image/avif">
                     <img class="best-image" src="./images/best/best@1X.jpg" srcset="./images/best/best@1X.jpg 1x, ./images/best/best@2X.jpg 2x" 
                     alt="test image"
                     width="602"
                     height="554">
-                </picture>
+                </picture> -->
                 <div class="best-review">
                     <div class="best-review-author">
                         <img class="best-review-image"
